apps/stream/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: stream
  labels:
    name: stream
