apps/stream/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: redis
  namespace: stream
spec:
  rules:
    - host: redis.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  name: dashboard
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: svelte
  namespace: stream
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svelte
                port:
                  name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: inventory
  namespace: stream
spec:
  rules:
    - host: inventory.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: payments
  namespace: stream
spec:
  rules:
    - host: payments.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payments
                port:
                  name: http
